Functionality for free draw routes and partial animations of markers.